# SparkLab

./: .env.template  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 157c579d20eb_add_users_and_activation_codes.py  8a3d6c1f2e4b_add_is_admin_to_activation_codes.py  a7b8c9d0e1f2_add_playbooks_tables.py  b8c9d0e1f2a3_drop_five_segment_add_content.py  c19a8d87bc38_add_templates_table.py  c9d0e1f2a3b4_drop_step_template_id_add_content.py  ca2ae254323e_add_creator_id_to_activation_codes.py  d0e1f2a3b4c5_add_playbook_runs_tables.py  d723673defcc_add_template_runs_table.py  e1f2a3b4c5d6_add_filled_prompt_and_final_result.py  eb0365cdfa9e_add_ai_result_to_template_runs.py  f1a2b3c4d5e6_add_favorites_table.py  fd8ecd3bc73a_add_tags_table.py  g1h2i3j4k5l6_add_is_private_to_templates_playbooks.py
backend/package/sparklab/: __init__.py  config.py
backend/server/: main.py
backend/server/routers/: __init__.py  activation_router.py  auth_router.py  favorite_router.py  my_playbook_router.py  my_template_router.py  playbook_router.py  system_router.py  tag_router.py  template_router.py
backend/server/utils/: access_log_middleware.py  auth_middleware.py  lifespan.py
backend/test/: __init__.py  conftest.py
backend/test/e2e/: __init__.py  test_admin_activation.py  test_auth_middleware_stub.py  test_dashboard.py  test_system.py  test_tag.py  test_template.py
backend/test/integration/: __init__.py  test_postgres.py  test_redis.py
docker/: api.Dockerfile  (+1 more)
(+122 files in other folders)
