[project]
name = "sparklab-backend"
version = "0.1.0"
description = "SparkLab AI 内容运营平台后端"
requires-python = ">=3.12"
dependencies = [
    # Web 框架
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    # 数据库
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # Redis
    "redis>=5.2",
    # 认证
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    # 配置 & 校验
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # 工具
    "python-dateutil>=2.9",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
# B008: FastAPI 标准用法允许 Depends()/Body() 等出现在参数默认值
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["test"]
pythonpath = ["server", "package"]
